feat: Add .env file support for consolidated secrets management (#72)
- Add support for consolidated .env file in secrets directory
- Maintain backward compatibility with individual secret files
- Implement caching with proper cache invalidation on missing files
- Add comprehensive security validations (permissions, size, symlinks)
- Support comments, quoted values, and values with = characters
- Update all documentation with .env file usage and examples
- Add 20 comprehensive tests covering all edge cases

Resolution order: env vars → .env file → individual files

Fixes cache initialization bug where missing files were cached as empty

--- a/docs/wiki/06.2-credentials.yml.md
+++ b/docs/wiki/06.2-credentials.yml.md
@@ -101,8 +101,16 @@ Secrets are resolved in this order:
    - Secrets are ONLY injected when Docker MCP Gateway runs the container (not when running manually)
 2. **Prefixed environment variable** (standalone/backward compatibility): `MCP_SSH_SECRET_<NAME>` (uppercase)
    - Supports existing standalone deployments using prefixed env vars
-3. **Docker secret file**: `/app/secrets/<name>`
-4. **Empty string**: If not found
+3. **`.env` file**: `/app/secrets/.env`
+   - Consolidated secrets file with `KEY=value` format
+   - Supports comments (lines starting with `#`) and empty lines
+   - Supports quoted values (single or double quotes)
+   - Values can contain `=` characters
+   - Case-insensitive key lookup
+4. **Docker secret file**: `/app/secrets/<name>`
+   - Individual file-based secret storage for standalone deployments
+   - Maintains backward compatibility with existing setups
+5. **Empty string**: If not found
 
 ### Docker MCP Gateway Secret Resolution
 
@@ -143,6 +151,102 @@ docker mcp secret set mcp-ssh-orchestrator.ssh_password_secret_01="my-password"
 docker exec <gateway-container> env | grep SSH_PASSWORD_SECRET_01
 # Should output: SSH_PASSWORD_SECRET_01=my-password
 ```
+
+### Using .env File for Secrets
+
+The `.env` file provides a convenient way to manage all secrets in a single consolidated file, making it easier to organize and maintain credentials.
+
+#### Creating a .env File
+
+1. Copy the example file:
+
+   ```bash
+   cp secrets/.env.example secrets/.env
+   ```
+
+2. Edit `secrets/.env` and add your secrets:
+
+   ```bash
+   # SSH Passwords
+   SSH_PASSWORD_SECRET_01=your-actual-password
+   lab_maint_password=your-lab-password
+
+   # SSH Key Passphrases
+   SSH_KEY_PASSPHRASE_01=your-actual-passphrase
+   prod_admin_passphrase=your-prod-passphrase
+   ```
+
+3. Set secure file permissions:
+
+   ```bash
+   chmod 600 secrets/.env
+   ```
+
+#### .env File Format
+
+- **Basic format**: `KEY=value` (one per line)
+- **Comments**: Lines starting with `#` are ignored
+- **Empty lines**: Ignored
+- **Quoted values**: Supports single (`'value'`) and double (`"value"`) quotes
+- **Values with `=`**: Values can contain `=` characters (split on first `=`)
+- **Whitespace**: Keys and values are automatically stripped of leading/trailing whitespace
+
+**Example .env file:**
+
+```bash
+# SSH Passwords
+SSH_PASSWORD_SECRET_01=my-password-123
+lab_maint_password="password with spaces"
+
+# SSH Key Passphrases
+SSH_KEY_PASSPHRASE_01=my-passphrase-456
+prod_admin_passphrase='another passphrase'
+
+# Values with equals signs
+COMPLEX_VALUE=key1=value1&key2=value2
+```
+
+#### Security Best Practices
+
+- **File permissions**: Always set `.env` file to `600` (owner read/write only)
+
+  ```bash
+  chmod 600 secrets/.env
+  ```
+
+- **Never commit**: Ensure `.env` is in `.gitignore` (it is by default)
+- **Location**: Keep `.env` file in the `secrets/` directory
+- **Backup**: Store backups securely, never in version control
+
+#### Migration from Individual Files
+
+To migrate from individual secret files to `.env`:
+
+1. List all your secret files:
+
+   ```bash
+   ls -1 secrets/
+   ```
+
+2. Read each secret and add to `.env`:
+
+   ```bash
+   echo "SECRET_NAME=$(cat secrets/SECRET_NAME)" >> secrets/.env
+   ```
+
+3. Verify the `.env` file:
+
+   ```bash
+   cat secrets/.env
+   ```
+
+4. Test that secrets still resolve correctly
+
+5. Optionally remove individual files (after verifying everything works)
+
+#### .env File Caching
+
+The `.env` file is cached after first load to improve performance. The cache is keyed by `secrets_dir`, so different directories maintain separate caches. If you modify the `.env` file, you may need to restart the application for changes to take effect (cache is not automatically invalidated).
 
 ### Path Traversal Protection
 
