docs: Comprehensive review and alignment of all documentation files (#73)
* docs: fix markdown linting issues (pre-commit auto-fixes)

- Add language tags to fenced code blocks
- Fix ordered list numbering in SECURITY.md
- Auto-fixes applied by markdownlint pre-commit hook

* docs: fix remaining markdown lint issues

- Fix ordered list numbering in SECURITY.md (add section headers to restart lists)
- Add missing language tag to code block in 06-Configuration.md
- All markdown linting issues now resolved

--- a/docs/wiki/06.3-policy.yml.md
+++ b/docs/wiki/06.3-policy.yml.md
@@ -85,6 +85,8 @@ The `limits` section defines global execution limits and security settings that 
 | `max_output_bytes` | integer | No | 1048576 | Maximum combined stdout/stderr output size in bytes | `524288` |
 | `host_key_auto_add` | boolean | No | false | **Deprecated**: Ignored for security (CWE-295). Always use `require_known_host: true` | `true` |
 | `require_known_host` | boolean | No | true | **Security**: Always enforced. Require host to exist in known_hosts before connection. Prevents MITM attacks | `false` |
+| `task_result_ttl` | integer | No | 300 | Async task result retention time in seconds (5 minutes). Results are kept for this duration after completion | `600` |
+| `task_progress_interval` | integer | No | 5 | Interval in seconds between progress notifications for async tasks | `10` |
 | `deny_substrings` | array | No | See below | List of substrings that will block any command containing them | `["rm -rf", "shutdown"]` |
 
 ### Command Denial Bypass Prevention
@@ -240,8 +242,10 @@ Override limits for specific host aliases.
 | `{alias_name}` | object | No | N/A | Host alias name (exact match) | `"prod-web-1"` |
 | `max_seconds` | integer | No | From limits | Override max execution time | `30` |
 | `max_output_bytes` | integer | No | From limits | Override max output size | `524288` |
-| `host_key_auto_add` | boolean | No | From limits | Override host key auto-add | `false` |
+| `host_key_auto_add` | boolean | No | From limits | Override host key auto-add (deprecated, ignored) | `false` |
 | `require_known_host` | boolean | No | From limits | Override host key requirement | `true` |
+| `task_result_ttl` | integer | No | From limits | Override async result retention time | `600` |
+| `task_progress_interval` | integer | No | From limits | Override progress notification interval | `10` |
 | `deny_substrings` | array | No | From limits | Override deny substrings list | `["rm -rf", "shutdown"]` |
 
 ### Tags Subsection
@@ -253,8 +257,10 @@ Override limits for hosts with specific tags.
 | `{tag_name}` | object | No | N/A | Tag name (exact match) | `"production"` |
 | `max_seconds` | integer | No | From limits | Override max execution time | `30` |
 | `max_output_bytes` | integer | No | From limits | Override max output size | `524288` |
-| `host_key_auto_add` | boolean | No | From limits | Override host key auto-add | `false` |
+| `host_key_auto_add` | boolean | No | From limits | Override host key auto-add (deprecated, ignored) | `false` |
 | `require_known_host` | boolean | No | From limits | Override host key requirement | `true` |
+| `task_result_ttl` | integer | No | From limits | Override async result retention time | `600` |
+| `task_progress_interval` | integer | No | From limits | Override progress notification interval | `10` |
 | `deny_substrings` | array | No | From limits | Override deny substrings list | `["rm -rf", "shutdown"]` |
 
 ## Glob Pattern Matching
